Closed Bug 931427 Opened 12 years ago Closed 12 years ago

error: undefined reference to 'nsWrapperCache::GetWrapper() const' building with gcc 4.5.1

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox27 --- verified
firefox28 --- verified

People

(Reporter: wgianopoulos, Assigned: wgianopoulos)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Since bug 930583 landed I can no longer build using gcc 4.5.1. I get link errors: error: undefined reference to 'nsWrapperCache::GetWrapper() const'
Actual error messages: ../../build/unix/gold/ld: /home/wag/mozilla/mozilla2/fx32-obj/toolkit/library/../../content/html/document/src/HTMLAllCollection.o: in function mozilla::dom::HTMLAllCollection::GetObject(JSContext*, mozilla::ErrorResult&):/home/wag/mozilla/mozilla2/content/html/document/src/HTMLAllCollection.cpp:56: error: undefined reference to 'nsWrapperCache::GetWrapper() const' ../../build/unix/gold/ld: /home/wag/mozilla/mozilla2/fx32-obj/toolkit/library/../../content/xbl/src/nsBindingManager.o: in function nsBindingManager::GetBindingImplementation(nsIContent*, nsID const&, void**):/home/wag/mozilla/mozilla2/content/xbl/src/nsBindingManager.cpp:740: error: undefined reference to 'nsWrapperCache::GetWrapper() const'
Attached patch Patch v1 (obsolete) — Splinter Review
Doesn't make sense this is gcc version related. It is probably something else different in my build. In any event, this fixes the issue.
Assignee: nobody → wgianopoulos
Status: NEW → ASSIGNED
Attachment #823099 - Flags: review?(ehsan)
That did not take very long to bitrot.
Attachment #823099 - Attachment is obsolete: true
Attachment #823099 - Flags: review?(ehsan)
Attachment #823247 - Flags: review?(bugs)
Attachment #823247 - Flags: review?(bugs) → review+
Whiteboard: check-in needed
Keywords: checkin-needed
Whiteboard: check-in needed
(In reply to :Ehsan Akhgari (needinfo? me!) [Away 10/29-11/6] from comment #4) > https://hg.mozilla.org/integration/mozilla-inbound/rev/1da7038b32ab Thanks for checking this in.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Bill, is this fixed for you now?
Flags: needinfo?(wgianopoulos)
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #7) > Bill, is this fixed for you now? Yes. Was fixed by my patch.
Flags: needinfo?(wgianopoulos)
Status: RESOLVED → VERIFIED
Comment on attachment 823247 [details] [diff] [review] Include nsWrapperCacheInlines.h [Approval Request Comment] Bug caused by (feature/regressing bug #): User impact if declined: SeaMonkey Official Release off Gecko 27 unable to build Testing completed (on m-c, etc.): Tested manual compile of SeaMonkey on Gecko 27 Risk to taking this patch (and alternatives if risky): Been on aurora for a while now String or IDL/UUID changes made by this patch: None
Attachment #823247 - Flags: approval-mozilla-beta?
Attachment #823247 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Bill, can you please verify that you don't get the same error when building current Beta?
Flags: needinfo?(wgianopoulos)
OK need to restart my old fedora 14 build vmslice that i no longer run should have an answer tonight sometime.
Flags: needinfo?(wgianopoulos)
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #11) > Bill, can you please verify that you don't get the same error when building > current Beta? OK, sorry this took longer than I thought. I can verify that if I build current Firefox Beta I do not get this error. However, the build is still not successful because a successful GCC 4.5.1 Firefox build from the current beta source also requires the patch from bug 931428.
(In reply to Bill Gianopoulos [:WG9s] from comment #13) > However, the build is still not successful because a successful GCC 4.5.1 Firefox build from the current > beta source also requires the patch from bug 931428. Okay, thanks for checking. Feel free to nominate bug 931428 to uplift to Beta given this information.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: