Bug 931427 - Include nsWrapperCacheInlines.h in HTMLAllCollection.cpp and nsBindingManager.cpp; r=smaug